# nucleo-476rg-hello

./: .gitignore  CMakeLists.txt  README.md  arm-gcc-toolchain.cmake  bsp__led_8h_source.html  dir_4ae1ec0b4d24896aee0db3cc78ea7123.html  dir_52c912f73dac9c4c0e442232e1b2bd80.html  dir_d422163b96683743ed3963d4aac17747.html  files.html  globals.html  globals_defs.html  group___b_s_p.html  group___b_s_p___led.html  index.html  main_8h.html  main_8h_source.html  menudata.js  modules.html
Cube/: hello_world.ioc
app/: CMakeLists.txt  main.c  main.h
docs/: arm_hello_world_doc  index.md
hal/: CMakeLists.txt
hal/bsp/: CMakeLists.txt  bsp_led.c  bsp_led.h
hal/stm32l4xx_hal/: CMakeLists.txt
hal/stm32l4xx_hal/inc/: stm32l4xx_hal_def.h  stm32l4xx_hal_gpio.h
hal/system/: CMakeLists.txt  gpio.c  gpio.h
